[tests] Switch to RCPTT 2.5.4
A Specific Capella Studio product is required, as it needs to include
RCPTT features

Adapted JenkinsFile and Maven build

Change-Id: Ib5017a5d41506301549ea1b287a84d05a9b2f888
Signed-off-by: Erwann Traisnel <erwann.traisnel@obeo.fr>